--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "manifest_version": 3,
-  "name": "Canvas Search",
+  "name": "Canvascope",
   "version": "1.0.0",
   "description": "Instantly search all your Canvas course content using natural language. Privacy-first, all data stays local.",
   "icons": {
     "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
@@ -12,9 +13,9 @@
     "default_popup": "popup.html",
     "default_icon": {
       "16": "icons/icon16.png",
-      "48": "icons/icon48.png"
+      "32": "icons/icon32.png"
     },
-    "default_title": "Canvas Search"
+    "default_title": "Canvascope"
   },
   "permissions": [
     "storage",
