--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "[BETA] Canvascope",
-  "version": "0.2.3",
+  "name": "Canvascope",
+  "version": "1.0.0",
   "description": "Instantly search all your Canvas course content using natural language. Privacy-first, all data stays local.",
   "icons": {
     "16": "icons/icon16.png",
@@ -15,14 +15,15 @@
       "16": "icons/icon16.png",
       "32": "icons/icon32.png"
     },
-    "default_title": "[BETA] Canvascope"
+    "default_title": "Canvascope"
   },
   "permissions": [
     "storage",
     "activeTab",
     "tabs",
     "alarms",
-    "scripting"
+    "scripting",
+    "notifications"
   ],
   "host_permissions": [
     "*://*.instructure.com/*",
