--- a/manifest.json
+++ b/manifest.json
@@ -22,8 +22,7 @@
     "activeTab",
     "tabs",
     "alarms",
-    "scripting",
-    "notifications"
+    "scripting"
   ],
   "host_permissions": [
     "*://*.instructure.com/*",
